<?xml version="1.0" encoding="utf-8"?><!-- TODO: всё блять съезжает к хуям вне зависимости от наличия ёбаной клавиатуры!!!!!!!!!!!!!!!-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_fragment_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".fragments.NewTaskFragment">

    <TextView
        android:id="@+id/tv_fragment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center|top"
        android:text="@string/task"
        android:textSize="35sp" />

    <LinearLayout
        android:id="@+id/ll_add_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|top"
            android:text="@string/description"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|top"
            android:inputType="text"
            android:ems="23"
            android:text=""
            android:textSize="35sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_add_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_priority"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|top"
            android:text="@string/priority"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:gravity="center"
                android:text="@string/is_your_task_important"
                android:textColor="@color/black"
                android:textSize="25sp">

            </TextView>

            <CheckBox
                android:id="@+id/cb_is_important"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:gravity="center"
                android:text="@string/is_your_task_an_urgent_one"
                android:textColor="@color/black"
                android:textSize="25sp">

            </TextView>

            <CheckBox
                android:id="@+id/cb_is_urgent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="0"
        android:text="@string/apply" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:text="@string/delete" />
</LinearLayout>